# reportes.py

./: .gitignore  gui.py  pyproject.toml  rerequirements.txt
data/: informe_base_datos.json  pea_piads_iv.json
desktop_gui/: __init__.py  app.py  config.py  importers.py  services.py  utils.py  widgets.py
reporting/: __init__.py  context_builder.py  layout_checks.py  rendering.py  shared.py
src/: build_report_context.py  check_layout_risks.py  render_informe.py
templates/: plantilla_informe_base.docx  plantilla_informe_fpe.docx
